.kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: joke-spring-deployment
  namespace: joker
  labels:
    app: joke-spring-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: joke-spring-pod
  template:
    metadata:
      labels:
        app: joke-spring-pod
    spec:
      containers:
      - name: joke-spring-container
        image: registry:5000/m4rt1nn/joke-spring-boot:1.0.0
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
