.kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: joke-spring-service
  namespace: joker
spec:
  selector:
    app: joke-spring-pod
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
